<?xml version="1.0"?>
<package format="2">
  <name>elas</name>
  <version>0.0.1</version>
  <description>
    ROS wrapper functionality for libelas, including point cloud construction algorithm.
    Please note that this code is licensed under GPL. For a commercial usage of libelas, 
    please contact Andreas Geiger directly 
    (see <a href="http://www.cvlibs.net/software/libelas.html">http://www.cvlibs.net/software/libelas.html</a>).
  </description>
  <author email="patrick.ross@connect.qut.edu.au">Patrick Ross</author>
  <maintainer email="patrick.ross@connect.qut.edu.au">Patrick Ross</maintainer>
  <license>GPL</license>  
  <url type="website">http://ros.org/wiki/cyphy_elas_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>libelas</depend> 
  <depend>elas_ros</depend> 

  <export>
    <metapackage/>
  </export>
</package>
