<package>
  <name>elas_ros</name>
  <version>0.0.1</version>
  <description>
    ROS wrapper functionality for libelas, including point cloud construction algorithm.
    Please note that this code is licensed under GPL. For a commercial usage of libelas, 
    please contact Andreas Geiger directly 
    (see <a href="http://www.cvlibs.net/software/libelas.html">http://www.cvlibs.net/software/libelas.html</a>).
  </description>
  <author email="patrick.ross@connect.qut.edu.au">Patrick Ross</author>
  <maintainer email="patrick.ross@connect.qut.edu.au">Patrick Ross</maintainer>
  <license>GPL</license>  
  <url type="website">http://ros.org/wiki/cyphy_elas_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libelas</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>stereo_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>image_transport</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>pcl_ros</build_depend> 
  <build_depend>pcl</build_depend> 
  <build_depend>pcl_conversions</build_depend> 
  <build_depend>geometry_msgs</build_depend> 

  <run_depend>libelas</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>stereo_msgs</run_depend> 
  <run_depend>nav_msgs</run_depend> 
  <run_depend>message_filters</run_depend> 
  <run_depend>image_transport</run_depend> 
  <run_depend>cv_bridge</run_depend> 
  <run_depend>image_geometry</run_depend> 
  <run_depend>tf</run_depend> 
  <run_depend>pcl_ros</run_depend> 
  <run_depend>pcl</run_depend> 
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>geometry_msgs</run_depend> 

</package>
