<package>
  <name>libelas</name>
  <version>0.0.1</version>
  <description>
    This is a ROS-Package for libelas, a library for visual odometry created by Andeas Geiger from the Institute of Measurement and Control Systems at Karlsruhe Institute of Technology.
    
    Please note that this code is licensed under GPL. For a commercial usage of libelas, please contact Andreas Geiger directly (see <a href="http://www.cvlibs.net/software/libelas.html">http://www.cvlibs.net/software/libelas.html</a>).
  </description>
  <author email="geiger@kit.edu">Andreas Geiger</author>
  <maintainer email="patrick.ross@connect.qut.edu.au">Patrick Ross</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/elas</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp cflags="-msse3 -I${prefix}/libelas/src/" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lelas"/>
  </export>

</package>
